--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.0'
     compile 'com.android.support:design:23.2.0'
+    compile files ('libs/json_simple-1.1.jar')
+    compile files ('libs/dropbox-android-sdk-1.6.3.jar')
 }
